# timp-lab04

./: CMakeLists.txt  workflow.yaml
.github/workflows/: workflow.yaml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
